[package]
name = "yadon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6", features = ["macros", "json"]}
hyper = "0.14.23"
tokio = { version = "1.24.2", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs", "cors"]}